# blackhole

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  gui.h  particle_effect.h  particle_system.h  script_parser.h  shader.h
shaders/: blackhole.fs  blackhole.vs  particle.fs  particle.vs
src/: CMakeLists.txt  camera.cpp  gui.cpp  main.cpp  particle_system.cpp  script_parser.cpp  shader.cpp
